--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,6 +57,13 @@ header h1 {
   -webkit-font-smoothing: antialiased;
 }
 
+header h1 a {
+  text-decoration: none;
+  font-weight: bold;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color: #b5e853;
+}
+
 header h1:before {
   content: "./ ";
   font-size: 24px;
