--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,12 +60,28 @@ article{
 	letter-spacing: 3px;
 }
 
+.home-list ul {
+    padding: 0;
+}
+
+.home-list ul li {
+    list-style: none;
+    height: 35px;
+    line-height: 35px;
+    margin: 0;
+    font-size: 1.5em;
+}
+
+.home-list ul li a {
+    font-family: 'Ubuntu', sans-serif; color: #000000;
+}
+
 article.home div a, article.home pre a { color: #2c3e50; }
 article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
 article img { max-width: 100%; }
 
-h1,h2,h3,h4,h5,h6{ font-family: 'Ubuntu', sans-serif; color: #f2756a; }
-h1 a,h2 a,h3 a,h4 a{ color: #f2756a; }
+h1,h2,h3,h4,h5,h6{ font-family: 'Ubuntu', sans-serif; color: #000000; }
+h1 a,h2 a,h3 a,h4 a{ color: #000000; }
 h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover{ color: #e74c3c; }
 
 footer {
