--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
 body{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 17px;
+    line-height: 1.5;
 	color: #2c3e50;
     background-color: #f9f9f9;
 }
