--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,14 @@
 }
 
 html, body { height: auto; }
-h1, h2, h3, h4, h5, h6 { font-size: 100%; margin-top:.6em;}
+h1, h2, h3, h4, h5, h6 {  margin-top:.6em;}
 h2 { font-size: 125%; margin-bottom: .5em; }
-p { margin: 1em 0; }
+p { margin: 1.5em 0; }
 
 body {
-   background-color: #ecf0f1;
-   font: 14px/24px arial,"\5b8b\4f53",sans-serif,"Microsoft YaHei",tahoma;
-   font-size: small;
+   background-color: #FFFFFF;
+   color: #3c3c3c;
+   font-family: "Microsoft Yahei","Hiragino Sans GB","WenQuanYi Micro Hei","sans-serif";
    -webkit-font-smoothing: antialiased;
    text-align: center;
 }
@@ -53,10 +53,10 @@ a:hover { color: #2980B9; }
 }
 
 main {
-   font-size: 115%;
+   font-size: 16px;
+   line-height: 1.8em;
    text-align: left;
    margin: 2em auto 0.5em;
-   line-height: 1.5em;
    max-width: 42em;
    padding-left: 18px;
    padding-right: 18px;
@@ -93,13 +93,16 @@ code,
 pre {
    font-family: Menlo, Monaco, "Courier New", monospace;
 }
+
 code {
-   padding: .25em .5em;
-   font-size: 75%;
-   color: #bf616a;
-   background-color: transparent;
-   border-radius: 3px;
+   padding: 1px 4px;
+   border: 0;
+   background-color: #D6DBDF;
+   border-radius: 4px;
+   color: #2C3E50;
+   font-size: 90%;
 }
+
 pre {
    display: block;
    margin: 0 0 14px;
@@ -171,6 +174,12 @@ footer #date {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
+}
+
+hr {
+   border: 0;
+   border-bottom: 1px dashed #cfcfcf;
+   margin: 30px 0;
 }
 
 /* Remove the huge gap at the first paragraph */
