--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ header a {
 
 code,
 pre {
-   font-family: Menlo, Monaco, "Courier New", monospace;
+   font-family: Consolas, "Ubuntu Mono", Monaco, "Courier New", monospace;
 }
 
 code {
