--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <meta name="description" content="Personal blog of Berk Özbalcı, about computers, math and music">
+      <meta name="description" content="fansekey的个人博客，记录心得，游记等">
       <meta name="author" content="orrafy">
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="/css/syntax.css">
@@ -15,7 +15,7 @@
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
-      <title>About Me</title>
+      <title>{{ page.title }}</title>
       <meta name="twitter:card" content="summary">
       <meta name="twitter:site" content="@shouding">
    </head>
@@ -23,25 +23,10 @@
    <body>
       <main>
          <header>
-            <h1 class="title"><a href="/">:)</a></h1>
+            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
          </header>
 
-         <article>
-   <h2>About Me</h2>
-   <h2>on the Internet</h2>
-
-<ul>
-<li><a href="https://github.com/xiangshouding">@xiangshouding</a></li>
-</ul>
-
-</article>
-
-<footer>
-   <div id="return">
-      <a href="/">&laquo; Return to the home page</a>
-   </div>
-</footer>
-
+         {{ content }}
       </main>
       <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
