--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,18 @@
    </head>
    
    <body>
+      <header>
+        <span class="code-block">
+        &lt;?php
+        </span>
+        <h1 class="title">echo <a href="/">$my_blog_name</a>;</h1>
+      </header>
       <main>
-         <header>
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-         </header>
-
          {{ content }}
       </main>
+      <footer>
+        <span class="code-block">?&gt;</span>
+      </footer>
       <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
