--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html, body { height: auto; }
 
 body {
    background-color: #FFFFFF;
-   color: #3c3c3c;
+   color: #444444;
    font-family: "Microsoft Yahei","Hiragino Sans GB","WenQuanYi Micro Hei","sans-serif";
    -webkit-font-smoothing: antialiased;
 }
@@ -96,17 +96,18 @@ pre {
 code {
    padding: 1px 4px;
    border: 0;
-   background-color: #D6DBDF;
-   border-radius: 4px;
+   background-color: #EEEEEE;
    color: #2C3E50;
-   font-size: 90%;
+   border: 1px solid #CCCCCC;
+   border-radius: 3px;
+   margin: 0 4.5px;
+   font-size: 95%;
 }
 
 pre {
    display: block;
    margin: 0 0 14px;
    padding: 10px 20px;
-   font-size: 15px;
    line-height: 1.4;
    white-space: pre;
    white-space: pre-wrap;
@@ -114,11 +115,11 @@ pre {
    word-wrap: break-word;
    background-color: #eee;
 }
+
 pre code {
-   padding: 0;
-   font-size: 80%;
    color: inherit;
    background-color: transparent;
+   border: 0;
 }
 
 .highlight {
@@ -166,23 +167,20 @@ hr {
    line-height: 1.5em;
 }
 
-p   {
-    font-size: 16px;
-    line-height: 1.5em;
-    max-width: 960px;
-    font-weight: 400;
-     color: #333333
-}
-
-
 h2, h3, h4 {
     color: #111111;
     font-weight: 400;
 }
 
-h2, h3, h4, h5, p {
+h2, h3, h4, h5 {
     margin-bottom: 25px;
     padding: 0;
+}
+
+p {
+   margin: 10px 0 25px;
+   font-size: 17px;
+   line-height: 2em;
 }
 
 h2 {
@@ -235,7 +233,6 @@ article blockquote {
     max-width: 476px;
 }
 article blockquote  cite {
- /   font-size:14px;
     line-height:20px;
     color:#bfbfbf;
 }
