--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
       <meta name="description" content="fansekey的个人博客，记录心得，游记等">
       <meta name="author" content="orrafy">
       <meta name="viewport" content="width=device-width">
+      <link rel="stylesheet" href="/css/normalize.css">
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
-      <link rel="stylesheet" href="/css/normalize.css">
       <link rel="stylesheet" href="/css/css/font-awesome.min.css">
       <!--[if IE 7]>
         <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
@@ -19,19 +19,16 @@
       <meta name="twitter:card" content="summary">
       <meta name="twitter:site" content="@shouding">
    </head>
-   
    <body>
       <header>
-        <span class="code-block">
-        &lt;?php
-        </span>
-        <h1 class="title">echo <a href="/">$my_blog_name</a>;</h1>
+        <div class="container">
+          <h3><a href="/">开发点滴</a></h3>
+        </div>
       </header>
       <main>
          {{ content }}
       </main>
       <footer>
-        <span class="code-block">?&gt;</span>
       </footer>
       <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
