--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,13 @@
       <meta name="description" content="fansekey的个人博客，记录心得，游记等">
       <meta name="author" content="orrafy">
       <meta name="viewport" content="width=device-width">
-      <link rel="stylesheet" href="/css/normalize.css">
-      <link rel="stylesheet" href="/css/syntax.css">
-      <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/css/font-awesome.min.css">
       <!--[if IE 7]>
         <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
       <![endif]-->
+      <link rel="stylesheet" href="/css/css/default.css">
+      <link rel="stylesheet" href="/css/css/syntax.css">
+      <link rel="stylesheet" href="/css/css/style.css">
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
@@ -19,17 +19,15 @@
       <meta name="twitter:card" content="summary">
       <meta name="twitter:site" content="@shouding">
    </head>
-   <body>
-      <header>
-        <div class="container">
-          <h3><a href="/">开发点滴</a></h3>
-        </div>
-      </header>
-      <main>
+   <body class="article">
+      <div id="header">
+          <h1><a href="/">开发点滴</a></h1>
+      </div>
+      <div id="content">
          {{ content }}
-      </main>
-      <footer>
-      </footer>
+      </div>
+      <div id="footer"><div id="footer-text">&copy;2015</div></div>
+
       <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
