--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -14,6 +14,10 @@
   padding-bottom: 0;
 }
 
+.post-link {
+  display: inline-block;
+}
+
 .post-link .post-title {
   margin-top: 0;
   font-weight: 600;
@@ -38,7 +42,7 @@
   width: auto;
   font-weight: 300;
   margin: 0;
-  padding: .25em 0;
+  padding: .25em;
   color: #7a7a7a;
   font-style: italic;
 }
