--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
     {% if site.show_social_icons or site.show_sharing_icons %}
       <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     {% endif %}
+    <link rel="stylesheet" href="//unpkg.com/heti/umd/heti.min.css">
 
     <!-- Verifications -->
     {% if site.google_verification %}
