--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
   <header class="post-header">
     <h1 class="h2">{{ page.title }}</h1>
   </header>
-  <article class="post-content">
+  <article class="post-content heti">
   {{ content }}
   </article>
 </div>
