--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
   </span>
 </div>
 
-<article class="post-content">
+<article class="post-content heti heti--ancient">
   {{ content }}
 </article>
 
