--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -22,7 +22,7 @@ Full list at my <a href="{{ url_for("blog") }}">my Blog</a>.
 </section>
 
 <h1>{{ post.title }}</h1>
-<div class="content">
+<div class="content heti">
   {{ post.html | safe }}
 </div>
 
