--- a/theme/templates/layout.html
+++ b/theme/templates/layout.html
@@ -7,10 +7,11 @@
   <link href="{{ url_for("static", file="css/reset.css") }}?v={{ revision }}" rel="stylesheet">
   <link href="{{ url_for("static", file="css/site.css") }}?v={{ revision }}" rel="stylesheet">
   <link rel="preload" href="{{ url_for("static", file="fonts/blockzone-webfont.woff2") }}" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="//unpkg.com/heti/umd/heti.min.css">
   {% block head %}{% endblock %}
 </head>
 <body>
-  <header id="preamble" class="status">
+  <header id="preamble" class="status heti heti--classic">
     <div class="logo">
       <a href="/">
         <img src="https://0.gravatar.com/avatar/6187fb849f337554f1515012aedd06d55365e8ac6f170cbadfaaf94d5e3790cd?s=80" class="avatar" alt="My icon."/>
@@ -25,7 +26,7 @@
         </a>
     </div>
  </header>
- <main id="main">
+ <main id="main" class="heti heti--classic">
  {% block main %}{% endblock %}
  </main>
 
@@ -34,5 +35,10 @@
  <p class='disclaimer'></p>
 
   <p>Last updated {{ now() | strftime("%d %b %Y") }}. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> {{ emacs_version }} (<a href="https://orgmode.org/">Org</a> mode {{ org_version }}). <a href="{{ url_for("pages", slug="readme") }}">Details</a>.</p>
+  <script src="//unpkg.com/heti/umd/heti-addon.min.js"></script>
+  <script>
+    const heti = new Heti('.heti');
+    heti.autoSpacing();
+  </script>
 </body>
 </html>
