--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -2,9 +2,11 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block main %}
-<h1>{{ post.title }}</h1>
-<div class="date">{{ post.date | strftime("%d %b %Y") }}</div>
-<div class="content">
-  {{ post.html | safe }}
-</div>
+<article class="heti heti--classic">
+  <h1>{{ post.title }}</h1>
+  <div class="date">{{ post.date | strftime("%d %b %Y") }}</div>
+  <div class="content">
+    {{ post.html | safe }}
+  </div>
+</article>
 {% endblock %}
