--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -5,27 +5,28 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block main %}
-<section class="post-list">
-<h2><i class="fa fa-bookmark"></i>&nbspLatest writings</h2>
-<ul class="org-ul">
-{% for p in weblorg_route_posts("blog") | attr("posts") | take(20)  %}
-<li>
-  <span class="timestamp">{{ p.date|strftime("%d %b %Y") }}</span>
- -
-  <a href="{{ url_for("posts", slug=p.slug) }}">{{ p.title }}</a>
-</li>
-{% endfor %}
-</ul>
-
-Full list at my <a href="{{ url_for("blog") }}">my Blog</a>.
-
-</section>
-
-<h1>{{ post.title }}</h1>
-<div class="content heti">
-  {{ post.html | safe }}
+<div class="heti heti--classic">
+  <section class="post-list">
+    <h2><i class="fa fa-bookmark"></i>&nbspLatest writings</h2>
+    <ul class="org-ul">
+    {% for p in weblorg_route_posts("blog") | attr("posts") | take(20)  %}
+    <li>
+      <span class="timestamp">{{ p.date|strftime("%d %b %Y") }}</span>
+     -
+      <a href="{{ url_for("posts", slug=p.slug) }}">{{ p.title }}</a>
+    </li>
+    {% endfor %}
+    </ul>
+    
+    Full list at my <a href="{{ url_for("blog") }}">my Blog</a>.
+    
+    </section>
+    
+    <h1>{{ post.title }}</h1>
+    <div class="content">
+      {{ post.html | safe }}
+    </div>
 </div>
-
 {% endblock %}
 
 
