--- a/theme/templates/layout.html
+++ b/theme/templates/layout.html
@@ -26,7 +26,7 @@
         </a>
     </div>
  </header>
- <main id="main" class="heti heti--classic">
+ <main id="main">
  {% block main %}{% endblock %}
  </main>
 
