--- a/theme/templates/blog.html
+++ b/theme/templates/blog.html
@@ -2,11 +2,19 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block main %}
-{% for p in posts %}
-<li>
-  <span class="timestamp">{{ p.date|strftime("%d %b %Y") }}</span>
- -
-  <a href="{{ url_for("posts", slug=p.slug) }}">{{ p.title|default(p.slug) }}</a>
-</li>
-{% endfor %}
+
+<div class="heti heti--classic">
+  <section class="post-list">
+  <ul class="org-ul">
+    {% for p in posts %}
+    <li>
+      <span class="timestamp">{{ p.date|strftime("%d %b %Y") }}</span>
+    -
+      <a href="{{ url_for("posts", slug=p.slug) }}">{{ p.title|default(p.slug) }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+  </section>
+</div>
+
 {% endblock %}
